--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -31,6 +31,7 @@
     "@commercelayer/eslint-config-ts-react": "^1.3.0",
     "@testing-library/react": "^14.1.2",
     "@types/lodash": "^4.14.202",
+    "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
