chore: create promotion config folder

--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -46,6 +46,9 @@
       "#pages/*": [
         "src/pages/*"
       ],
+      "#types": [
+        "src/types.ts"
+      ],
     }
   },
   "include": [
