--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -16,14 +16,14 @@
   },
   "dependencies": {
     "@commercelayer/app-elements": "^1.16.0",
-    "@commercelayer/sdk": "5.33.0",
+    "@commercelayer/sdk": "5.33.1",
     "@hookform/resolvers": "^3.3.4",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.50.1",
+    "react-hook-form": "^7.51.0",
     "swr": "^2.2.5",
-    "type-fest": "^4.10.3",
+    "type-fest": "^4.11.1",
     "wouter": "^3.0.1",
     "zod": "^3.22.4"
   },
@@ -32,13 +32,14 @@
     "@testing-library/react": "^14.2.1",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.24",
-    "@types/react": "^18.2.61",
-    "@types/react-dom": "^18.2.19",
+    "@types/react": "^18.2.63",
+    "@types/react-dom": "^18.2.20",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
     "jsdom": "^24.0.0",
+    "rollup-plugin-external-globals": "^0.9.2",
     "typescript": "^5.3.3",
-    "vite": "^5.1.4",
+    "vite": "^5.1.5",
     "vite-tsconfig-paths": "^4.3.1",
     "vitest": "^1.3.1"
   }
