--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:watch": "pnpm -r test:watch",
     "dep:major": "pnpm dlx npm-check-updates --packageFile '**/package.json' -u",
     "dep:minor": "pnpm dep:major -t minor",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "keywords": [],
   "repository": {
@@ -28,8 +28,8 @@
     "packages/*"
   ],
   "devDependencies": {
-    "husky": "^9.0.11",
-    "lerna": "^8.1.4",
+    "husky": "^9.1.1",
+    "lerna": "^8.1.6",
     "lint-staged": "^15.2.7",
     "npm-check-updates": "^16.14.20"
   },
